# machine-learning-a-to-z--ai-python-and-r

./: README.md  hello.py  pyproject.toml
.devcontainer/: devcontainer.json
machine-learning-az-codes-and-datasets/part-01-data/section-2-part-1-data-preprocessing/python/: data_preprocessing_template.ipynb
machine-learning-az-codes-and-datasets/part-02/section-4-simple-linear/python/: simple_linear_regression.ipynb
machine-learning-az-codes-and-datasets/part-02/section-5-multiple-linear/python/: multiple_linear_regression.ipynb
machine-learning-az-codes-and-datasets/part-02/section-6-polynomial/python/: polynomial_regression.ipynb
machine-learning-az-codes-and-datasets/part-02/section-7-support-vector-regression/python/: support_vector_regression.ipynb
machine-learning-az-codes-and-datasets/part-02/section-8-decision-tree/python/: decision_tree_regression.ipynb
machine-learning-az-codes-and-datasets/part-02/section-9-random-forest/python/: random_forest_regression.ipynb
machine-learning-az-codes-and-datasets/part-03/section-14-logistic/python/: logistic_regression.ipynb
machine-learning-az-codes-and-datasets/part-03/section-15-knearest-neighbors/python/: k_nearest_neighbors.ipynb
machine-learning-az-codes-and-datasets/part-03/section-16-support-vector-machine/python/: support_vector_machine.ipynb
machine-learning-az-codes-and-datasets/part-03/section-17-kernel/python/: kernel_svm.ipynb
machine-learning-az-codes-and-datasets/part-03/section-18-naive/python/: naive_bayes.ipynb
(+17 files in other folders)
